se cambio la weaita
ahora somos la pandilla mantequilla

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     
     <footer>
        <div class ="contenedor">
-            <h3>Síguenos en nuestras redes sociales</h3>
+            <h3>Somos la pandilla mantequilla</h3>
             <div class ="botones">      
                 <a class="icon-facebook-squared" href="http://www.facebook.com"></a>
                 <a class="icon-twitter" href="http://www.twitter.com"></a>
