esqueleto del formulario

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <label class="icon-menu" for="menu-bar"></label>
                 <nav class="menu">
                     <a href="">Inicio</a>
-                    <a href="">Contáctenos</a>
+                    <a href="form.html">Contáctenos</a>
                     <a href="">Nosotros</a>
                     <a href="">Tienda</a>
                     
